--- a/public/css/app.css
+++ b/public/css/app.css
@@ -75,9 +75,9 @@ a:hover{
 
 }
 .articl-produit img{
-    width: 400px;
+    width: 93%;
     height: 200px;
-    margin: 15px;
+    margin: 3%;
 }
 #produit-nom{
     text-align: center;
@@ -342,7 +342,7 @@ article a {
     position: absolute;
     background-color: #D9D9D9;
     color: black;
-    width: 500px;
+    width: 40%;
     height: 500px;
     border-radius: 0 10px 10px 10px;
     margin-left: 15px;
@@ -359,7 +359,7 @@ article a {
 }
 .button-sub-menu button{
     background: rgba(28, 26, 26, 0.14);
-    margin-left: 150px;
+    margin-left: 40%;
 }
 .checkbox input{
 
@@ -647,6 +647,7 @@ transform: scale(1.1);
 }
 
 .filtre {
+    
     background-color: #FFFFFF;
     width: 150px;
     padding: 10px;
@@ -657,14 +658,32 @@ transform: scale(1.1);
 
 }
 
-.filtre-categorie{
-    display: flex;
-    flex-direction: row;
-}
-
 #categories{
     display: flex;
     flex-wrap: wrap;
+}
+
+
+.messagerie-logo {
+    position: absolute;
+    top : 26px;
+    right: 15%;
+
+}
+
+.messagerie-logo img {
+    position: inherit;
+    top: 0;
+    width: 60px;
+    height: 50px;
+    cursor: pointer;
+}
+.detail-messagerie{
+    position: absolute;
+    top: 20px;
+    right: 16%;
+
+    color: red;
 }
 
 
@@ -691,74 +710,122 @@ transform: scale(1.1);
     color: red;
 }
 
+.cart-container{
+  width: 100%;
+    background-color: lightgrey;
+    min-height: 500px;
+ padding-top: 2px;
+    padding-bottom: 2px;
+    margin-bottom: 20px;
+}
+.cart{
+    background-color: #FFFFFF;
+    color: black;
+    width: 70%;
+    margin-left: 1%;
+    min-height: 250px;
+    margin-bottom: 1%;
 
-/* styles.css */
+}
+.cart h1{
+margin-top: 10px;
+    margin-left: 5px;
+    border-bottom: solid grey 1px ;
+    width: 90%;
+}
 
-.custom-table {
-    width: 100%;
-    border-collapse: collapse;
+
+.cart-produit {
     margin-top: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+    display: flex;
+    border-bottom: solid grey 1px;
+    width: 90%;
+    margin-left: 5px;
 }
 
-.custom-table th, .custom-table td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
+.cart-produit img {
+    width: 150px;
+    height: 150px;
+    margin-left: 2%;
 }
 
-.custom-table th {
-    background-color: #f2f2f2;
+.cart-details {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+}
+
+.cart-produit-content {
+    flex-grow: 1;
+    margin-left: 60%;
+    width: 100%;
+}
+
+.cart-produit-action{
+
+    display: block;
+}
+.cart-produit-action img
+{
+    width: 15px;
+    height: 15px;
+    border: 1px solid black;
+    margin-left: 7px;
+    margin-top: 5px;
+}
+.cart-produit-content-etat{
+    color: #1EC34C;
+}
+
+.cart-action{
+    width: 18%;
+    right: 0;
+    top: 40%;
+    margin-right: 4%;
+    display: block;
+    background-color: #FFFFFF;
+    border: #302F2F solid;
     color: #302F2F;
+    padding: 10px;
+    position: absolute;
+
+
+}
+.quantite-selectionner{
+    margin-left: 30%;
+    border: solid black 1px;
+    width: 20px;
 }
 
-.product-header {
-    width: 30%;
-}
-
-.price-header, .quantity-header, .total-header, .action-header {
-    width: 15%;
-}
-
-.add-button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 5px 10px;
+.add-button{
+    width: 50%;
+    padding: 5px;
+    word-wrap: break-word;
+    cursor: pointer;
+    margin-left: 25%;
+    margin-top: 10%;
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    border-radius: 4px;
-}
-.remove-button {
-    background-color: orange;
-    color: white;
-    padding: 5px 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    border-radius: 4px;
+    background-color: #0EF6DA;
 }
 .delete-button{
+    width: 50%;
     background-color: red;
-    color: white;
-    padding: 5px 10px;
+    margin-left: 25%;
+    padding: 5px;
+    margin-top: 10%;
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    border-radius: 4px;
 }
-
-.td-info img {
-    width: 80px;
-    height: 50px;
-    margin-left: 30px;
-
+#total-panier{
+    position: absolute;
+    right: 10%;
+    font-size: larger;
+    font-weight: bold;
+    top: 5%;
+    color: red;
 }
-.td-info{
-    width: 100%;
-    text-align: center;
-    text-decoration: underline;
-    font-size: large;
+#total{
+    margin-left: 5%;
 }
 .message-flash {
     position: absolute;
@@ -776,10 +843,8 @@ transform: scale(1.1);
 .message-flash.fade-out {
     opacity: 0;
 }
-.center-content {
-    width: 100%;
-    text-align: center;
-}
+
+
 
 
 .messagerie{
@@ -801,6 +866,9 @@ transform: scale(1.1);
 {
     border-bottom:#D9D9D9 solid; ;
     cursor: pointer;
+}
+.unread {
+    font-weight: bold;
 }
 .element-image{
     position: absolute;
@@ -951,13 +1019,15 @@ transform: scale(1.1);
 display: flex;
 }
 .button_profil a {
-    width: 40%;
+    padding: 10px;
+    width: 20%;
+
     text-align: center;
     background: rgba(5, 135, 255, 0.94);
-    margin-left: 5%;
+    margin-left: 15%;
     margin-bottom: 5px;
     cursor: pointer;
-    height: 33px;
+    height: 100%;
     flex-shrink: 0;
     border-radius: 30px;
     margin-top: 5px;
