--- a/templates/message/index.html.twig
+++ b/templates/message/index.html.twig
@@ -39,6 +39,10 @@
             </a>
             {% endfor %}
 
+            {% else %}
+               <div class="messagerie-vide">
+                  <h2>Votre messagerie ne contient aucun message pour le moment</h2>
+               </div>
             {% endif %}
 
 
