--- a/templates/produit/detail.html.twig
+++ b/templates/produit/detail.html.twig
@@ -47,6 +47,7 @@
         </div>
         <div class="produit-details">
             <h2 class="produit-nom">{{ produit.nom }}</h2>
+            <p> publication : {{ produit.statut }}</p>
             <div class="produit-etat"><ul><li>{{ produit.etat }}</li></ul></div>
             <div class="produit-description">{{ produit.discription }}</div>
         </div>
