--- a/templates/produit/list.html.twig
+++ b/templates/produit/list.html.twig
@@ -19,6 +19,7 @@
         </div>
 <section class="produit-list">
     {% for produit in produits %}
+        {% if produit.statut != "en attente de validation" %}
         <article class="articl-produit">
             <a href="{{ path('produits_detail', {'id': produit.id}) }}" title="Voir les détails | quantité disponible {{ produit.quantite }}">
                 {% if produit.image != "" %}
@@ -34,6 +35,7 @@
             <p id="produit-etat">{{ produit.etat }}</p>
            </div>
         </article>
+        {% endif %}
     {% endfor %}
 </section>
     </div>
