--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -19,6 +19,7 @@
     {{ form_row(registrationForm.codePostal) }}
     {{ form_row(registrationForm.ville) }}
     {{ form_row(registrationForm.pays) }}
+    {{ form_row(registrationForm.photoDeProfil) }}
     <button type="submit" class="btn">Register</button>
     {{ form_end(registrationForm) }}
      <article>
