--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -1,8 +1,8 @@
-{% extends 'main/home.html.twig' %}
+{% extends 'baseForm.html.twig' %}
 
-{% block title %}Password Reset Email Sent{% endblock %}
+{% block titleForm %}Password Reset Email Sent{% endblock %}
 
-{% block body %}
+{% block bodyForm %}
     <p>
         If an account matching your email exists, then an email was just sent that contains a link that you can use to reset your password.
         This link will expire in {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
